Fix overlap of gem count over info by increasing the height

--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -135,7 +135,7 @@ table {
 }
 
 .main .fold {
-  height: 70px;
+  height: 85px;
 }
 
 .main .fold .count {
